--- a/zvandiri-buciness/src/main/resources/zw/org/zvandiri/business/resources/application.properties
+++ b/zvandiri-buciness/src/main/resources/zw/org/zvandiri/business/resources/application.properties
@@ -2,8 +2,8 @@ db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/zvandiri
 #db.username=zvandiri
 #db.password=zvandiri2016
-db.username=root
-db.password=pass
+db.username=zvandiri
+db.password=zvandiri2016
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
