Completed mental health screening

--- a/zvandiri-buciness/src/main/resources/zw/org/zvandiri/business/resources/application.properties
+++ b/zvandiri-buciness/src/main/resources/zw/org/zvandiri/business/resources/application.properties
@@ -18,3 +18,4 @@ entitymanager.packages.to.scan=zw.org.zvandiri.business.domain
 #MessageSource
 message.source.basename=i18n/messages
 message.source.use.code.as.default.message=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
