--- a/zvandiri-client/zvandiri-portal/src/main/webapp/WEB-INF/web.xml
+++ b/zvandiri-client/zvandiri-portal/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,16 @@
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <filter>
+        <filter-name>SpringOpenEntityManagerInViewFilter</filter-name>
+        <filter-class>
+            org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter
+        </filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SpringOpenEntityManagerInViewFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <error-page>
         <location>/errors</location>
     </error-page>
