--- a/zvandiri-buciness/src/main/resources/zw/org/zvandiri/business/resources/application.properties
+++ b/zvandiri-buciness/src/main/resources/zw/org/zvandiri/business/resources/application.properties
@@ -3,7 +3,7 @@ db.url=jdbc:mysql://localhost:3306/zvandiri
 #db.username=zvandiri
 #db.password=zvandiri2016
 db.username=root
-db.password=P@ng3414
+db.password=password
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
