--- a/zvandiri-client/zvandiri-portal/pom.xml
+++ b/zvandiri-client/zvandiri-portal/pom.xml
@@ -38,6 +38,6 @@
         </dependency>
     </dependencies>   
     <build>
-        <finalName>zvandiri</finalName>
+        <finalName>zvandiri-test</finalName>
     </build>
 </project>
