Updated mortality form

--- a/zvandiri-buciness/src/main/resources/zw/org/zvandiri/business/resources/application.properties
+++ b/zvandiri-buciness/src/main/resources/zw/org/zvandiri/business/resources/application.properties
@@ -1,9 +1,9 @@
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/zvandiri_test
+db.url=jdbc:mysql://localhost:3306/zvandiri
 #db.username=zvandiri
 #db.password=zvandiri2016
-db.username=zvandiri_test
-db.password=zvandiri_test
+db.username=root
+db.password=password
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
