--- a/zvandiri-client/zvandiri_portal/pom.xml
+++ b/zvandiri-client/zvandiri_portal/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>spring-expression</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.3.6.Final</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>   
     <build>
         <finalName>zvandiri-test</finalName>
