--- a/zvandiri-buciness/pom.xml
+++ b/zvandiri-buciness/pom.xml
@@ -149,5 +149,11 @@
 	     <artifactId>liquibase-core</artifactId>
 	      <version>3.4.1</version>
 	</dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.11.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
