--- a/zvandiri-buciness/src/main/resources/application.properties
+++ b/zvandiri-buciness/src/main/resources/application.properties
@@ -20,5 +20,5 @@ entitymanager.packages.to.scan=zw.org.zvandiri.business.domain
 message.source.basename=i18n/messages
 message.source.use.code.as.default.message=true
 spring.jpa.open-in-view=false
-//spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
