now with mental_health_screening report but yet to be finished 2

--- a/zvandiri-client/zvandiri_portal/pom.xml
+++ b/zvandiri-client/zvandiri_portal/pom.xml
@@ -49,6 +49,6 @@
         </dependency>
     </dependencies>   
     <build>
-        <finalName>zvandiri-test</finalName>
+        <finalName>zvandiri</finalName>
     </build>
 </project>
