Addedd Morbidity Report and Unique Contacted Clients Report but yet to be tested.

--- a/zvandiri-buciness/src/main/resources/application.properties
+++ b/zvandiri-buciness/src/main/resources/application.properties
@@ -11,7 +11,7 @@ hibernate.hbm2ddl.auto=update
 #hibernate.max_fetch_depth=3
 #hibernate.jdbc.fetch_size=30
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-hibernate.show_sql=false
+hibernate.show_sql=true
 
 #EntityManager
 #Declares the base package of the entity classes
