--- a/zvandiri-buciness/pom.xml
+++ b/zvandiri-buciness/pom.xml
@@ -90,6 +90,14 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.connector.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.oracle.jdbc/ojdbc8 -->
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>12.2.0.1</version>
+        </dependency>
+
+
         <!-- BoneCP -->
         <dependency>
             <groupId>com.jolbox</groupId>
