--- a/zvandiri-buciness/src/main/resources/application.properties
+++ b/zvandiri-buciness/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-#db.driver=com.mysql.jdbc.Driver
-#db.url=jdbc:mysql://localhost:3306/zvandiri
-#db.username=zvandiri
-#db.password=zvandiri2019
-#hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-db.driver=oracle.jdbc.OracleDriver
-db.url=jdbc:oracle:thin:@//localhost:2010/zvandiri
+db.driver=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/zvandiri
 db.username=zvandiri
 db.password=zvandiri2019
-hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#db.driver=oracle.jdbc.OracleDriver
+#db.url=jdbc:oracle:thin:@//localhost:2010/zvandiri
+#db.username=zvandiri
+#db.password=zvandiri2019
+#hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
