With ArvHistory Report yet to be tested

--- a/zvandiri-buciness/src/main/resources/application.properties
+++ b/zvandiri-buciness/src/main/resources/application.properties
@@ -15,9 +15,9 @@ hibernate.hbm2ddl.auto=update
 #hibernate.max_fetch_depth=3
 #hibernate.jdbc.fetch_size=30
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-hibernate.show_sql=true
+hibernate.show_sql=false
 
-#EntityManager
+#EntityManager 
 #Declares the base package of the entity classes
 entitymanager.packages.to.scan=zw.org.zvandiri.business.domain
 #MessageSource
