ArvHist Finished but problem with deployment.

--- a/zvandiri-buciness/pom.xml
+++ b/zvandiri-buciness/pom.xml
@@ -91,11 +91,11 @@
             <version>${mysql.connector.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.oracle.jdbc/ojdbc8 -->
-        <dependency>
-            <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc8</artifactId>
-            <version>12.2.0.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.oracle.database.jdbc</groupId>-->
+<!--            <artifactId>ojdbc8</artifactId>-->
+<!--            <version>12.2.0.1</version>-->
+<!--        </dependency>-->
 
 
         <!-- BoneCP -->
